file pakde terbaru

--- a/index.html
+++ b/index.html
@@ -1,98 +1,112 @@
+
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Personal Branding dengan AI - NganggurPreneur Akademi</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Pakde Sugiarto - NganggurPreneur & AI Branding Coach</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background-color: #e0f7ff;
-      color: #333;
       margin: 0;
       padding: 0;
+      background-color: #e6f3ff;
+      color: #333;
     }
-    .header {
+    .hero {
       background-color: #00aaff;
       color: white;
-      padding: 2rem;
       text-align: center;
+      padding: 40px 20px 20px;
     }
-    .content {
-      max-width: 800px;
-      margin: 2rem auto;
-      padding: 1rem;
-      background: #ffffff;
-      border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+    .hero h1 {
+      font-size: 28px;
+      margin-bottom: 10px;
     }
-    h1 {
-      font-size: 2rem;
-      margin-bottom: 1rem;
+    .hero p {
+      font-size: 16px;
+      font-weight: 300;
+    }
+    .container {
+      background: white;
+      border-radius: 20px;
+      padding: 20px;
+      margin: -30px 16px 20px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+    }
+    .profile-img {
+      width: 100%;
+      max-width: 360px;
+      border-radius: 12px;
+      display: block;
+      margin: 0 auto 20px;
     }
     .section {
-      margin-bottom: 2rem;
+      margin-bottom: 24px;
     }
-    .cta-button {
-      background-color: #00aaff;
+    .section h2 {
+      font-size: 20px;
+      color: #00aaff;
+      margin-bottom: 10px;
+    }
+    .cta {
+      text-align: center;
+      margin-top: 30px;
+    }
+    .cta a {
+      background: #00aaff;
       color: white;
-      padding: 1rem 2rem;
+      padding: 14px 28px;
+      border-radius: 30px;
       text-decoration: none;
-      border-radius: 8px;
       font-weight: bold;
-      display: inline-block;
+      font-size: 16px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+    }
+    .cta a:hover {
+      background: #008fcc;
     }
     footer {
       text-align: center;
-      padding: 1rem;
-      font-size: 0.9rem;
+      font-size: 14px;
+      padding: 20px;
       color: #777;
-    }
-    .image {
-      text-align: center;
-      margin-top: 2rem;
-    }
-    .image img {
-      max-width: 200px;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     }
   </style>
 </head>
 <body>
-  <div class="header">
-    <h1>Bangun Personal Branding 10x Lebih Cepat dengan AI</h1>
-    <p>Program oleh NganggurPreneur Akademi bersama Pakde Sugiarto</p>
+
+  <div class="hero">
+    <h1>Dari Nganggur, Jadi Mentor</h1>
+    <p>Bangun Personal Branding & Income bersama 3IReborn + AI</p>
   </div>
-  <div class="content">
-    <div class="image">
-      <img src="pakde-sugiarto.jpg" alt="Pakde Sugiarto">
+
+  <div class="container">
+    <img src="pakde-sugiarto.jpg" alt="Pakde Sugiarto" class="profile-img">
+    <div class="section">
+      <h2>Perkenalkan Saya, Pakde Sugiarto</h2>
+      <p>Dulu saya nganggur, tapi 3IReborn memberi jalan untuk bangkit. Saya membentuk NganggurPreneur sebagai wadah orang-orang yang ingin tumbuh dari nol. Sekarang, lewat NganggurPreneur Akademi dan teknologi AI, saya membantu banyak orang membangun branding dan bisnis digital.</p>
     </div>
     <div class="section">
-      <h2>Kenapa Personal Branding Penting?</h2>
-      <p>Di era digital, orang tidak hanya membeli produk, mereka membeli siapa kamu. Personal branding membuat kamu terlihat, dipercaya, dan diingat.</p>
-    </div>
-    <div class="section">
-      <h2>Solusinya: Gunakan Kekuatan AI</h2>
-      <p>AI membantu kamu menciptakan konten, visual, suara, dan cerita personal branding dengan lebih cepat, lebih konsisten, dan lebih profesional — meskipun kamu pemula!</p>
-    </div>
-    <div class="section">
-      <h2>Apa yang Akan Kamu Pelajari?</h2>
+      <h2>3 Pilar Kesuksesan</h2>
       <ul>
-        <li>Membuat konten personal branding dengan AI</li>
-        <li>Desain karakter diri dan aset digital</li>
-        <li>Membangun suara dan cerita brand</li>
-        <li>Membuat konten otomatis dari gambar ke video</li>
+        <li><strong>3IReborn:</strong> Fondasi untuk membangun passive income</li>
+        <li><strong>NganggurPreneur:</strong> Komunitas bagi yang ingin bangkit</li>
+        <li><strong>AI Tools:</strong> Solusi konten dan branding yang cepat dan efisien</li>
       </ul>
     </div>
     <div class="section">
-      <h2>Daftar Sekarang</h2>
-      <p>Kamu bisa belajar langsung bersama Pakde Sugiarto di NganggurPreneur Akademi!</p>
-      <a class="cta-button" href="https://wa.me/628XXXXXXX?text=Hai%20saya%20tertarik%20belajar%20AI%20dan%20Personal%20Branding">Gabung Sekarang via WhatsApp</a>
+      <h2>Mau Mulai Sekarang?</h2>
+      <p>Kamu gak sendiri. Saya bantu dari awal. Kita belajar bareng untuk bertumbuh bareng.</p>
+    </div>
+    <div class="cta">
+      <a href="https://wa.me/6285218453131?text=Halo%20Pakde%2C%20saya%20tertarik%20belajar%20personal%20branding%20dan%20AI%20bersama%20NganggurPreneur%20Akademi%20🙏🏻">Saya Siap Belajar Bareng Pakde 💬</a>
     </div>
   </div>
+
   <footer>
-    &copy; 2025 NganggurPreneur Akademi. Dibangun dengan semangat berbagi oleh Pakde Sugiarto.
+    &copy; 2025 NganggurPreneur Akademi | Powered by 3IReborn & AI
   </footer>
+
 </body>
 </html>
